<resources>
    <string name="app_name">Ghost Kitchen Android</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be 8 or more characters</string>
    <string name="invalid_password_2">Passwords do not match</string>
    <string name="invalid_phone">Must be 10 or 11 digits in length</string>
    <string name="required">Required</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_button">Don\'t have an account? Register</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="title_activity_login_tabbed">Ghost Kitchen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="negative_button">Cancel</string>
    <string name="delete_strong">DELETE</string>
    <string name="logout">Logout</string>
    <string name="pending">Pending</string>
    <string name="cancelled">Cancelled</string>
    <string name="overview">Overview</string>
    <string name="address_title">Address</string>
    <string name="name">Name</string>

    <!-- STORE OWNER ORDER OVERVIEW -->

    <string name="total_sales">TOTAL SALES</string>
    <string name="total_orders">TOTAL ORDERS</string>
    <string name="current_pending_orders">CURRENT PENDING ORDERS</string>
    <string name="top_kitchen">TOP KITCHEN</string>
    <string name="store_owner_orders_overview_title">Orders Overview</string>

    <!-- ORDER FRAGMENT -->

    <string name="order_id">Order ID:</string>
    <string name="kitchen_name">Kitchen:</string>
    <string name="date">Date:</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="order_status">Order Status:</string>
    <string name="order_total">TOTAL:</string>
    <string name="order_tax">Tax:</string>
    <string name="order_details">Order Details</string>
    <string name="mark_order_complete">Set Completed</string>

    <!-- END ORDER FRAGMENT -->

    <!-- CUSTOMER -->

    <string name="shop">Shop</string>
    <string name="orders">Orders</string>
    <string name="info">Info</string>
    <string name="map">Map</string>
    <string name="filter">Filter</string>
    <string name="featured">Featured</string>
    <string name="explore">Explore</string>
    <string name="favorites">Favorites</string>
    <string name="kitchen_details">Kitchen Details</string>

    <!-- END CUSTOMER -->

    <!-- STORE OWNER -->

    <!-- add kitchen -->
    <string name="add_kitchen_toolbar_title">New Ghost Kitchen</string>
    <string name="add_kitchen_title">Kitchen Info</string>
    <string name="add_kitchen_name">Kitchen Name</string>
    <string name="add_kitchen_button">Add Kitchen</string>

    <!-- EDIT KITCHEN -->
    <string name="edit_image">EDIT IMAGE</string>

    <!-- my kitchens -->
    <string name="my_kitchens_toolbar_title">My Ghost Kitchens</string>
    <string name="my_kitchens_no_kitchens">NO KITCHENS AVAILABLE</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="menu">Menu</string>

    <!-- order -->
    <string name="order_row_time">11:59 AM</string>
    <string name="order_row_deliver_by">Deliver By: 12:59 PM</string>
    <string name="order_row_buyer_name">Buyer Name</string>
    <string name="address_or_pickup">Address\nor Pickup</string>
    <string name="order_row_details">$19.99\n4 Items</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total:</string>
    <string name="add_to_cart_dialog_title">Add to Cart</string>
    <string name="edit_cart_dialog_title">Edit Quantity</string>
    <string name="checkout">Checkout</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="pickup_time">Pickup Time:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="delivery_fee">Delivery:</string>
    <string name="tax_fee">Tax:</string>
    <string name="charges">Charges</string>
    <string name="place_order">Place Order</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="no_pending_orders">NO PENDING ORDERS</string>
    <string name="no_orders">NO ORDERS AVAILABLE</string>
    <string name="no_completed_orders">NO COMPLETED ORDERS</string>
    <string name="delivery_time">Delivery Time:</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="cvv">CVV</string>

    <!-- item -->
    <string name="no_description">No description available</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="enter_new_category">Enter a new category</string>
    <string name="description">Description</string>
    <string name="no_items_exist">NO ITEMS YET CREATED</string>
    <string name="item_deleted">Item deleted successfully</string>
    <string name="item_delete_failed">Item deletion FAILED</string>
    <string name="dialog_create_item_title">Create Item</string>

    <!-- END STORE OWNER -->


    <!-- ADDRESS -->
    <string name="address_line1">Address line 1</string>
    <string name="address_line2">Address line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">zip</string>
    <string name="phone">Phone</string>
    <string name="new_address_title">New Address</string>

    <!-- NAVBAR -->
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="store_owner_my_kitchens">My Ghost Kitchens</string>
    <string name="store_owner_add_kitchen">New Ghost Kitchen</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="order_status">
        <item>PENDING</item>
        <item>COMPLETE</item>
        <item>CANCELLED</item>
    </string-array>

    <string-array name="states_full">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>
