<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/new_address_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_user_address_name_il"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_user_address_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="text|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_user_address_address1_il"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_address_name_il">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_user_address_address1_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address_line1"
            android:inputType="textPostalAddress|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_user_address_address2_il"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_address_address1_il">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_user_address_address2_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address_line2"
            android:inputType="textPostalAddress|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/create_user_address_city_state_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_address_address2_il">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_user_address_city_il"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_user_address_city_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city"
                android:inputType="textPostalAddress|textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/create_user_address_state_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_user_address_zip_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_address_city_state_ll">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_user_address_zip_il"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_user_address_zip_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/zip"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_user_address_phone_il"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_user_address_phone_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


