<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_row_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="2dp"
    tools:layout_editor_absoluteX="5dp"
    tools:layout_editor_absoluteY="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/order_row_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/order_row_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/order_row_time"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Time"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_row_time_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_row_deliver_by"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/order_row_time"
            app:layout_constraintStart_toStartOf="@+id/order_row_time"
            app:layout_constraintTop_toBottomOf="@+id/order_row_time" />

        <TextView
            android:id="@+id/order_row_buyer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/order_row_buyer_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/order_row_time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_row_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="555-555-5555"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/order_row_time"
            app:layout_constraintTop_toBottomOf="@+id/order_row_buyer_name" />


        <TextView
            android:id="@+id/order_row_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/address_or_pickup"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/order_row_time"
            app:layout_constraintTop_toBottomOf="@+id/order_row_phone" />

        <TextView
            android:id="@+id/order_row_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:text="@string/order_row_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/order_row_status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_pending_24dp"
            app:layout_constraintEnd_toEndOf="@+id/order_row_details"
            app:layout_constraintStart_toStartOf="@+id/order_row_details"
            app:layout_constraintTop_toBottomOf="@+id/order_row_details" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>